--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="gradient-background ">
     <form action="insert.php" method="POST">
         <h1>Registration Form</h1>
         
@@ -58,6 +59,8 @@
         <!-- Submit and Reset -->
         <button type="submit">Submit</button>
         <button type="reset">Reset</button>
+</div>
+
     </form>
 </body>
 </html>
